# amber-cli

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: build-and-test-amber-cli.yml
src/: app_config.rs  lib.rs  main.rs  rest_client.rs
tests/: rest_client_tests.rs
