[package]
name = "amber-client"
authors = ["Brendan Horan"]
license = "BSD 3-Clause License"
readme = "README.md"
homepage = "https://github.com/brendanhoran/amber-cli"
description = "ClI tool to access the Amber energy REST API"
categories = ["command-line-utilities"]
edition = "2021"
version = "0.1.0"




[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
iso8601-timestamp = "0.2.11"
config = "0.13.1"
chrono = "0.4.30"
dateparser = "0.2.0"
thiserror = "1.0.48"
clap = { version = "4.4.11", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.19"
claim = "0.5.0"
surf = "2.3.2"
