[package]
name = "amber-client"
authors = ["Brendan Horan"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/brendanhoran/amber-cli"
repository = "https://github.com/brendanhoran/amber-cli"
description = "CLI tool to provide access to Amber Energy's customer REST API"
categories = ["command-line-utilities"]
exclude = ["config.toml"]
edition = "2021"
version = "0.2.1"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
anyhow = "1.0.75"
time = { version = "0.3.31", features = ["formatting"] }
iso8601-timestamp = "0.2.16"
config = "0.13.1"
chrono = "0.4.30"
dateparser = "0.2.0"
thiserror = "1.0.48"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.1"
tracing = "0.1"
tracing-subscriber = { version ="0.3", features = ["env-filter", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.19"
claim = "0.5.0"
surf = "2.3.2"
